<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/viewImage"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_viewimage"
    cardview:cardCornerRadius="@dimen/cornerradius_cardview"
    android:layout_marginBottom="@dimen/margin_bottom_cardview"
    android:layout_marginLeft="@dimen/margin_bottom_cardview"
    android:layout_marginRight="@dimen/margin_bottom_cardview"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/cardProbeImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/image"
            android:scaleType="centerCrop"
            android:transitionName="@string/transitionName"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/backgroundtext_card"
            android:orientation="vertical"
            android:paddingStart="@dimen/fab_margin"
            android:paddingLeft="@dimen/fab_margin"
            android:paddingRight="@dimen/fab_margin"
            android:paddingBottom="@dimen/fab_margin">

            <TextView
                android:id="@+id/viewUserNameCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viewusernamecard_card"
                android:textColor="@android:color/white"
                android:textSize="@dimen/usernamecard_textize"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/viewFirstWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firstword_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/firstword_textsize" />

                <TextView
                    android:id="@+id/viewTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/time_margin"
                    android:text="@string/time_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/firstword_textsize" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkLikes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"
                    android:textColorHighlight="@color/colorPrimary" />

                <TextView
                    android:id="@+id/viewCountLikes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/time_margin"
                    android:text="@string/countlikes_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/firstword_textsize" />

            </LinearLayout>

        </LinearLayout>


    </FrameLayout>

</android.support.v7.widget.CardView>