<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".login.view.Login"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/banner1"
                android:contentDescription="@string/imagedescription_platzigram"
                android:onClick="goPlatziPage"

                />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_login">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/EditTextError"
                    android:paddingBottom="10dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_username"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@android:color/white"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/EditTextError">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"

                        />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_login"
                    android:theme="@style/RaisedButton" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/viewCreateAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/view_donthaveaccount"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/textsize_donthaveaccount"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/viewCreateHere"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/viewCreateAccount"
                        android:layout_toRightOf="@id/viewCreateAccount"
                        android:onClick="goCreateAccount"
                        android:text="@string/view_createhere"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/textsize_donthaveaccount"
                        android:textStyle="bold" />

                    <ProgressBar
                        android:id="@+id/progresBarLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:foregroundGravity="center"
                        />


                </RelativeLayout>


            </LinearLayout>

        </ScrollView>


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>