<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ImageDetail"
    android:fitsSystemWindows="true">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbarlayout_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary">

            <ImageView
                android:id="@+id/imageHeaderDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/image"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:contentDescription="Imagen del sujeto"
                android:transitionName="@string/transitionName"
                android:fitsSystemWindows="true"/>


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/margin_top">

            <TextView
                android:id="@+id/userNameDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/margin_username_detail"
                android:paddingRight="@dimen/margin_username_detail"
                android:text="@string/viewusernamecard_card"
                android:textSize="@dimen/textsize_username_detail" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/margin_username_detail"
                android:paddingRight="@dimen/margin_username_detail"
                android:paddingBottom="@dimen/margin_username_detail"
                >

                <TextView
                    android:id="@+id/likeNumberDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10"
                    android:textSize="@dimen/textsize_likenumber_detail" />

                <TextView
                    android:id="@+id/secondWord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/marginleft_secondword"
                    android:text="@string/second_word_detail"
                    android:textSize="@dimen/textsize_likenumber_detail"
                    android:layout_marginStart="@dimen/marginleft_secondword" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@android:color/darker_gray"
                />


            <TextView
                android:id="@+id/tittleImage_Detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/paddingtop_tiitleimage_detail"
                android:text="@string/text_tittleimage_detail"
                android:textSize="@dimen/textsize_likenumber_detail"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/contentImage_Detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/text_contentimage_detail"
                android:textSize="@dimen/textsize_likenumber_detail"
                android:padding="@dimen/padding_contentimage_detail"
                 />


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/checkbox_selector"
        app:layout_anchor="@+id/appBar"
        app:layout_anchorGravity="bottom|end"

        />


</android.support.design.widget.CoordinatorLayout>